// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tabs - renders 1`] = `
<div
  className="tabs"
>
  

  <ul>
    <li
      className="active"
      key="tab-item-test-0"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test
      </a>
      

    </li>
    <li
      className={null}
      key="tab-item-test 2-1"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test 2
      </a>
      

    </li>
  </ul>
</div>
`;

exports[`Component: Tabs - renders with class name .tabs.tabs-scroll when prop scroll is specified 1`] = `
<div
  className="tabs tabs-scroll"
>
  

  <ul>
    <li
      className="active"
      key="tab-item-test-0"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test
      </a>
      

    </li>
    <li
      className={null}
      key="tab-item-test 2-1"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test 2
      </a>
      

    </li>
  </ul>
</div>
`;

exports[`Component: Tabs - renders with class name tabs when prop scroll is not specified 1`] = `
<div
  className="tabs"
>
  

  <ul>
    <li
      className="active"
      key="tab-item-test-0"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test
      </a>
      

    </li>
    <li
      className={null}
      key="tab-item-test 2-1"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test 2
      </a>
      

    </li>
  </ul>
</div>
`;
